K8s-Deploymennt/02.Normal-deployment/02.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextjs-service
  namespace: my_ns
spec:
  selector:
    app: nextjs # This should match with deployment label
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
